# Proyecto-C

./: CMakeLists.txt  Estudiante.cpp  Informe de C++Joel Alexander.docx  Profesor.cpp  Secretaria.cpp  Trabajador.cpp  main.cpp
Interface/: Estudiante.h  Profesor.h  Secretaria.h  Trabajador.h
